--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,13 +15,13 @@
         android:id="@+id/navigation_catalog"
         android:name="com.example.harmonicatulashop.ui.catalog.CatalogFragment"
         android:label="@string/title_catalog"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_catalog" />
 
     <fragment
         android:id="@+id/navigation_cart"
         android:name="com.example.harmonicatulashop.ui.cart.CartFragment"
         android:label="@string/title_cart"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_cart" />
     <fragment
         android:id="@+id/navigation_account"
         android:label="@string/title_account" />
