--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,11 +9,16 @@
     <item
         android:id="@+id/navigation_catalog"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_catalog" />
 
     <item
         android:id="@+id/navigation_cart"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_cart" />
+
+    <item
+        android:id="@+id/navigation_account"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_account" />
 
 </menu>
