--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,7 +22,10 @@
         android:name="com.example.harmonicatulashop.ui.cart.CartFragment"
         android:label="@string/title_cart"
         tools:layout="@layout/fragment_cart" />
+
     <fragment
         android:id="@+id/navigation_account"
-        android:label="@string/title_account" />
+        android:name="com.example.harmonicatulashop.ui.account.AccountFragment"
+        android:label="@string/title_account"
+        tools:layout="@layout/fragment_account" />
 </navigation>
