--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,7 +18,7 @@
         tools:layout="@layout/fragment_catalog" />
 
     <fragment
-        android:id="@+id/navigation_cart"
+        android:id="@+id/shopping_cart"
         android:name="com.example.harmonicatulashop.ui.cart.CartFragment"
         android:label="@string/title_cart"
         tools:layout="@layout/fragment_cart" />
