--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_home"
@@ -15,5 +17,15 @@
         android:id="@+id/navigation_account"
         android:icon="@drawable/baseline_account_box_24"
         android:title="@string/title_account" />
+
+    <item
+    android:id="@+id/navigation_favourite"
+    android:icon="@drawable/baseline_favorite_border_24"
+    android:title="@string/favourite" />
+
+    <item
+        android:id="@+id/navigation_cart"
+        android:icon="@drawable/baseline_shopping_cart_24"
+        android:title="@string/title_cart" />
 
 </menu>
