--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -23,9 +23,22 @@
                 android:layout_height="310dp"
                 android:layout_marginTop="15dp"
                 android:contentDescription="@string/harmonica"
-                android:src="@drawable/photo_2022_07_28_15_46_14"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:src="@drawable/photo_2022_07_28_15_46_14" />
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="310dp"
+                android:layout_marginTop="15dp"
+                android:contentDescription="@string/harmonica"
+                android:src="@drawable/photo_2022_07_28_15_46_15" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="310dp"
+                android:layout_marginTop="15dp"
+                android:src="@drawable/photo_2022_08_01_15_17_03" />
 
 
         </LinearLayout>
