--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layoutBayan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -31,75 +31,27 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/bayanImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/bayan_1"
-                    android:contentDescription="@string/bayans" />
-
-                <TextView
-                    android:id="@+id/bayan"
-                    android:layout_width="match_parent"
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/title_bayans"
-                    android:textColor="@color/black"
-                    android:textStyle="italic"
-                    android:textSize="30sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_harmonica"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/harmonicaImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/kulikovopole_1"
-                    android:contentDescription="@string/bayans" />
+                    android:contentDescription="@string/harmonica_catalog"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/harmonica_catalog"
+                    tools:layout_editor_absoluteX="101dp" />
 
                 <TextView
                     android:id="@+id/textView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Гармони"
+                    android:text="@string/title_harmonica"
+                    android:textSize="30sp"
                     android:textColor="@color/black"
                     android:textStyle="italic"
-                    android:textSize="30sp" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:src="@drawable/tulskaya301m" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Гармони"
-                    android:textColor="@color/black"
-                    android:textStyle="italic"
-                    android:textSize="30sp" />
-
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
