harmonica catalog fragment

--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -47,7 +47,7 @@
                     android:onClick="@{()->viewmodel.onClickHarmonica()}">
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/catalogHarmonicaTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
