--- a/app/src/main/res/layout/fragment_harmonica_catalog.xml
+++ b/app/src/main/res/layout/fragment_harmonica_catalog.xml
@@ -9,6 +9,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/harmonica_catalog_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.catalog.harmonica.HarmonicaCatalogFragment">
