--- a/app/src/main/res/layout/fragment_harmonica_catalog.xml
+++ b/app/src/main/res/layout/fragment_harmonica_catalog.xml
@@ -18,9 +18,23 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="400dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/tulskaya301m"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:contentDescription="@string/title_harmonica" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:onClick="@{()->viewmodel.goBack()}"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
