--- a/app/src/main/res/layout/fragment_harmonica_catalog.xml
+++ b/app/src/main/res/layout/fragment_harmonica_catalog.xml
@@ -3,9 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+
         <variable
             name="viewmodel"
             type="com.example.harmonicatulashop.ui.catalog.harmonica.HarmonicaCatalogViewModel" />
+
+        <variable
+            name="list"
+            type="com.example.harmonicatulashop.ui.catalog.harmonica.HarmonicaList" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,27 +19,9 @@
         android:layout_height="match_parent"
         tools:context=".ui.catalog.harmonica.HarmonicaCatalogFragment">
 
-        <ImageView
-            android:id="@+id/imageView"
+
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/tulskaya301m"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp"
-            android:contentDescription="@string/title_harmonica" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Go back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            android:onClick="@{()->viewmodel.goBack()}"/>
-
+            android:layout_height="match_parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
