--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.harmonicatulashop.ui.catalog.CatalogViewModel" />
+            type="com.example.harmonicatulashop.ui.catalog.viewmodels.CatalogViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
