--- a/app/src/main/res/layout/fragment_harmonica_catalog.xml
+++ b/app/src/main/res/layout/fragment_harmonica_catalog.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.harmonicatulashop.ui.catalog.harmonica.HarmonicaCatalogViewModel" />
+            type="com.example.harmonicatulashop.ui.catalog.viewmodels.HarmonicaCatalogViewModel" />
 
     </data>
 
@@ -14,7 +14,7 @@
         android:id="@+id/harmonica_catalog_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.catalog.harmonica.HarmonicaCatalogFragment">
+        tools:context=".ui.catalog.fragments.HarmonicaCatalogFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/harmonica_list"
@@ -23,57 +23,5 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            app:layout_constraintBottom_toBottomOf="@id/harmonica_list"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@color/white">
-
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:layout_margin="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/tulskaya301m"
-                android:contentDescription="@string/harmonica_image" />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="16dp"
-                android:text="Гармошка"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/icon"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.04" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/add_to_cart"
-                app:layout_constraintStart_toEndOf="@+id/icon"
-                app:layout_constraintTop_toBottomOf="@+id/name" />
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="28dp"
-                app:layout_constraintStart_toEndOf="@+id/button2"
-                app:layout_constraintTop_toBottomOf="@+id/name"
-                app:srcCompat="@drawable/baseline_favorite_border_24"
-                android:contentDescription="@string/add_to_favourites" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
