bayan and accordion viewmodels

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -21,7 +21,7 @@
     <item
     android:id="@+id/navigation_favourite"
     android:icon="@drawable/baseline_favorite_border_24"
-    android:title="@string/favourite" />
+    android:title="@string/title_favourite" />
 
     <item
         android:id="@+id/navigation_cart"
