--- a/app/src/main/res/layout/item_accordion.xml
+++ b/app/src/main/res/layout/item_accordion.xml
@@ -15,14 +15,13 @@
         android:background="@color/white">
 
         <ImageView
-            android:id="@+id/bayan_icon"
+            android:id="@+id/accordion_icon"
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_margin="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@{}"
             android:contentDescription="@string/bayan_image" />
 
         <TextView
@@ -30,11 +29,11 @@
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
-            android:text="@={}"
+            android:text="@={viewModel.accordion.NAME}"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/bayan_icon"
+            app:layout_constraintStart_toEndOf="@+id/accordion_icon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04" />
 
@@ -45,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="28dp"
             android:text="@string/add_to_cart"
-            app:layout_constraintStart_toEndOf="@+id/bayan_icon"
+            app:layout_constraintStart_toEndOf="@+id/accordion_icon"
             app:layout_constraintTop_toBottomOf="@+id/name"
             android:onClick="@{()->viewModel.addToCart()}"/>
 
