--- a/app/src/main/res/layout/item_accordion.xml
+++ b/app/src/main/res/layout/item_accordion.xml
@@ -23,19 +23,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@{viewModel.accordion.iconUri}"
-            android:contentDescription="@string/accordion_image" />
+            android:contentDescription="@string/accordion_icon" />
 
         <TextView
             android:id="@+id/name"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
-            android:text="@{viewModel.accordion.NAME}"
+            android:text="@{viewModel.accordion.NAME + ' ' + viewModel.accordion.range}"
             android:textColor="@color/black"
             android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/accordion_icon"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04" />
 
         <Button
