--- a/app/src/main/res/layout/item_harmonica.xml
+++ b/app/src/main/res/layout/item_harmonica.xml
@@ -23,7 +23,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@{viewModel.harmonica.iconUrl}"
-            android:contentDescription="@string/harmonica_image" />
+            android:contentDescription="@string/harmonica_icon" />
 
         <TextView
             android:id="@+id/name"
