--- a/app/src/main/res/layout/item_accordion.xml
+++ b/app/src/main/res/layout/item_accordion.xml
@@ -11,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="170dp"
         android:background="@color/white">
 
         <ImageView
@@ -19,9 +19,9 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_margin="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@{viewModel.accordion.iconUri}"
             android:contentDescription="@string/accordion_icon" />
 
@@ -33,17 +33,29 @@
             android:text="@{viewModel.accordion.NAME + ' ' + viewModel.accordion.range}"
             android:textColor="@color/black"
             android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/accordion_icon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.145" />
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            android:text="@{viewModel.accordion.price}"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/accordion_icon"
-            app:layout_constraintVertical_bias="0.04" />
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintBottom_toTopOf="@+id/add_to_cart" />
 
         <Button
             android:id="@+id/add_to_cart"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="40dp"
             android:text="@string/add_to_cart"
             app:layout_constraintStart_toEndOf="@+id/accordion_icon"
             app:layout_constraintTop_toBottomOf="@+id/name"
@@ -54,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintStart_toEndOf="@+id/add_to_cart"
             app:layout_constraintTop_toBottomOf="@+id/name"
             app:srcCompat="@drawable/baseline_favorite_border_24"
