--- a/app/src/main/res/layout/item_harmonica.xml
+++ b/app/src/main/res/layout/item_harmonica.xml
@@ -26,7 +26,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@{viewModel.harmonicas.get(0).iconUrl}"
+            android:src="@{viewModel.harmonica.iconUri}"
             android:contentDescription="@string/harmonica_icon" />
 
         <TextView
@@ -34,7 +34,7 @@
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
-            android:text="@{viewModel.harmonicas.get(0).NAME + ' ' + viewModel.harmonicas.get(0).type + ' ' + viewModel.harmonicas.get(0).range + ' ' + viewModel.harmonicas.get(0).tone}"
+            android:text="@{viewModel.harmonica.NAME + ' ' + viewModel.harmonica.type + ' ' + viewModel.harmonica.range + ' ' + viewModel.harmonica.tone}"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +47,7 @@
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
-            android:text="@{viewModel.harmonicas.get(0).price}"
+            android:text="@{viewModel.harmonica.price}"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/harmonica_icon"
