--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,12 +18,6 @@
         tools:layout="@layout/fragment_catalog" />
 
     <fragment
-        android:id="@+id/navigation_account"
-        android:name="com.example.harmonicatulashop.ui.account.AccountFragment"
-        android:label="@string/title_account"
-        tools:layout="@layout/fragment_account" />
-
-    <fragment
         android:id="@+id/navigation_cart"
         android:name="com.example.harmonicatulashop.ui.cart.CartFragment"
         android:label="@string/title_cart"
@@ -32,7 +26,7 @@
     <fragment
         android:id="@+id/navigation_favourite"
         android:name="com.example.harmonicatulashop.ui.favourite.FavouriteFragment"
-        android:label="fragment_favourite"
+        android:label="@string/title_favourite"
         tools:layout="@layout/fragment_favourite" />
 
 </navigation>
