added account into navigation system

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -23,4 +23,9 @@
         android:icon="@drawable/baseline_shopping_cart_24"
         android:title="@string/title_cart" />
 
+    <item
+        android:id="@+id/navigation_account"
+        android:icon="@drawable/baseline_account_box_24"
+        android:title="@string/title_account" />
+
 </menu>
