--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,10 @@
         android:label="@string/title_favourite"
         tools:layout="@layout/fragment_favourite" />
 
+    <fragment
+        android:id="@+id/navigation_account"
+        android:name="com.example.harmonicatulashop.ui.account.AccountFragment"
+        android:label="@string/title_account"
+        tools:layout="@layout/fragment_account" />
+
 </navigation>
